# SIH25_2

./: .gitignore  .npmignore  API_REFERENCE.md  AUTO_TUNING_COMPLETE.md  AUTO_TUNING_FILES.txt  AUTO_TUNING_IMPLEMENTATION.md  AUTO_TUNING_QUICKREF.md  BUILD_COMPLETE.md  BUILD_GUIDE.md  CLI_COMPLETE_IMPLEMENTATION.md  CLI_DOCUMENTATION.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_UPGRADE_SUMMARY.md  CMakeLists.txt  COMPREHENSIVE_TEST_RESULTS.md  DISTRIBUTION.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_INTEGRATION_REPORT.md  FINAL_RE_BENCHMARK_REPORT.md  FINAL_TEST_REPORT.md  FIXES_NEEDED.md  GITHUB_RELEASE_GUIDE.md  INSTALLATION.md  MAOS_COMPLETE_IMPLEMENTATION_REPORT.md  MAOS_ENHANCEMENT_FINAL_REPORT.md  MAOS_IMPLEMENTATION_PLAN.md  MAOS_TRANSFORMATION_SUMMARY.md  NEXT_STEPS.md  NPM_PUBLISHING_GUIDE.md  NPM_PUBLISH_SUCCESS.md  NPM_README.md  PHANTRON_CLI_QUICKSTART.md  PHANTRON_IMPLEMENTATION_SUMMARY.md  PHANTRON_README.md  PROJECT_COMPLETE_STATUS.md  PROJECT_COMPLETION_CERTIFICATE.md  PROJECT_MAOS.md  PROJECT_SUMMARY.md  (+49 more)
benchmark_results/: detailed_report.csv
cli/: index.js
config/: balanced.yaml
docs/: ARCHITECTURE.md  AUTO_TUNING.md
examples/test-programs/: test_bit_manipulation.c  test_difficult.c  test_easy.c  test_function_pointers.c  test_main.cpp  test_medium.c  test_mixed_complexity.c  test_network.c  test_obfuscation.cpp  test_preprocessor.c  test_regex.c  test_variadic_functions.c
include/: ATIE.h  AutoTuner.h  CLIParser.h  ConfigParser.h  FileUtils.h  Logger.h  MAOSEngine.h  MetricsCollector.h  ObfuscationConfig.h  ObfuscationEngine.h  ObfuscationPass.h  PCGE.h  PassManager.h  QIRL.h  RandomGenerator.h  ReportGenerator.h
include/passes/: AntiDebug.h  BogusControlFlow.h  CallGraphObfuscation.h  ConstantObfuscation.h  ControlFlowFlattening.h  DeadCodeInjection.h  FunctionVirtualization.h  GrammarMetamorphic.h  HardwareCacheObfuscation.h  InstructionSubstitution.h  MBAObfuscation.h  OpaquePredicates.h  QuantumOpaquePredicates.h  StringEncryption.h
obfuscated_output/: test_easy_max  test_medium_max
release/: RELEASE_NOTES.md  SHA256SUMS.txt
release/phantron-obfuscator-linux-x64-v2.0.5/: LICENSE  README.txt  install.sh
reverse_engineering/: FILE_TREE.txt
reverse_engineering/scripts/: re_framework.py  run_benchmark.py
scientific_results/baseline/: test_easy_obf  test_easy_obfuscated  test_easy_original
src/: main.cpp
src/cli/: CLIParser.cpp
src/config/: ConfigParser.cpp  ObfuscationConfig.cpp
src/core/: ATIE.cpp  MAOSEngine.cpp  MAOSEngine_old.cpp  MAOSEngine_old2.cpp  ObfuscationEngine.cpp  ObfuscationPass.cpp  PCGE.cpp  PCGE_old.cpp  PCGE_old2.cpp  PassManager.cpp  QIRL.cpp  QIRL_old.cpp
src/passes/: AntiDebug.cpp  BogusControlFlow.cpp  CallGraphObfuscation.cpp  ConstantObfuscation.cpp  ControlFlowFlattening.cpp  DeadCodeInjection.cpp  FunctionVirtualization.cpp  GrammarMetamorphic.cpp  HardwareCacheObfuscation.cpp  (+5 more)
tests/: test_advanced_algorithms.c  test_advanced_cpp.cpp  test_data_structures.c  test_file_io.c  test_floating_point.c  test_memory_management.c  test_signal_handling.c  test_threads.c
(+40 files in other folders)
